Add support for magnetic switch
Also modify to work with C++11 in order to be able to use cross-compiler
to ARM.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,5 @@
-# configure with:
-# CXX_FLAGS=-static C_FLAGS=-static LD_FLAGS=-static PATH=$PATH:/opt/bin cmake <path to sources>
 cmake_minimum_required(VERSION 2.8)
-set(BUILD_SHARED_LIBS OFF)
-set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++17 -static -Wall")
-#set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
+set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 project(enocean_to_hue)
 add_executable(${PROJECT_NAME}
   "main.cpp"
