Split files and add embedded support
It is now possible to compile embedded version for ESP8266.
The configuration is compiled in via user_config.hpp and
user_config_map.hpp.

--- a/example/example.conf
+++ b/example/example.conf
@@ -20,16 +20,22 @@ FD:E5:DE:C1 1 44
 
 # 60-69 reserved for bedroom
 
-# bathroom door contact
+# bottom bathroom door contact
 02:95:E2:89 0 1000	# open
 02:95:E2:89 1 1001	# closed
+
+# top bathroom door contact
+05:80:DF:96 0 1010	# open
+05:80:DF:96 1 1011	# closed
 
 # Hallway and so:
 #
 # 102/103 - ground floor hallway light on/off
 # 104/105 - top floor hallway light on/off
-# 106/107 - cellar hallway light on/off
+# 106/107 - basement hallway light on/off
 # 108/109 - bathroom light on/off
+# 110/111 - basement left on/off
+# 112/113 - basement right on/off
 
 # bathroom switch
 FD:E5:7B:77 1 108   # top-left bathroom light on
@@ -50,8 +56,8 @@ FD:E5:7B:2B 3 104   # top-right top floor hallway on
 FD:E5:7B:2B 4 105   # bottom-right top floor hallway off
 
 # switch at the staircase right
-FD:E5:7B:7C 1 106   # top-left cellar hallway on
-FD:E5:7B:7C 2 107   # bottom-left cellar hallway off
+FD:E5:7B:7C 1 106   # top-left basement hallway on
+FD:E5:7B:7C 2 107   # bottom-left basement hallway off
 FD:E5:7B:7C 3 102   # top-right hallway on
 FD:E5:7B:7C 4 103   # bottom-right hallway off
 
@@ -62,10 +68,10 @@ FD:E5:7B:24 3 104   # top-right top floor hallway on
 FD:E5:7B:24 4 105   # bottom-right top floor hallway off
 
 # switch at the staircase bottom
-FD:E5:7B:39 1 104   # top-left cellar hallway on
-FD:E5:7B:39 2 105   # bottom-left cellar hallway off
-FD:E5:7B:39 3 104   # top-right cellar hallway on
-FD:E5:7B:39 4 105   # bottom-right cellar hallway ooff
+FD:E5:7B:39 1 110   # top-left basement on
+FD:E5:7B:39 2 111   # bottom-left basement left off
+FD:E5:7B:39 3 112   # top-right basement right on
+FD:E5:7B:39 4 113   # bottom-right basement right ooff
 
 # 110-120 reserved for virtual switches from hallway
 
