Support groups of switches for employing more than one receiver

--- a/example/example.conf
+++ b/example/example.conf
@@ -1,16 +1,26 @@
+# Groups for several bridges
+#
+# 47 - top floor
+# 1 - ground floor - living room
+# 63 - ground floor - office (disabled for now, not yet configured)
+
 # living room switch
+group 1
 FD:E7:37:A3 -1 10
 
 # tap switch kitchen
+group 1
 FD:E7:37:88 2 21
 FD:E7:37:88 4 22
 FD:E7:37:88 3 23
 FD:E7:37:88 1 24
 
 # office switch
+group 63
 FD:E5:7B:67 -1 30
 
 # tap switch Katarina
+group 47
 FD:E5:DE:C1 2 41
 FD:E5:DE:C1 4 42
 FD:E5:DE:C1 3 43
@@ -21,10 +31,12 @@ FD:E5:DE:C1 1 44
 # 60-69 reserved for bedroom
 
 # bottom bathroom door contact
+group 63
 02:95:E2:89 0 1000	# open
 02:95:E2:89 1 1001	# closed
 
 # top bathroom door contact
+group 47
 05:80:DF:96 0 1010	# open
 05:80:DF:96 1 1011	# closed
 
@@ -38,36 +50,42 @@ FD:E5:DE:C1 1 44
 # 112/113 - basement right on/off
 
 # bathroom switch
+group 47
 FD:E5:7B:77 1 108   # top-left bathroom light on
 FD:E5:7B:77 2 109   # bottom-left bathroom light off
 FD:E5:7B:77 3 102   # top-right hallway light on
 FD:E5:7B:77 4 103   # bottom-right hallway light off
 
 # switch at the entry door
+group 63
 FD:E5:DE:BD 1 101   # top-left no function now
 FD:E5:DE:BD 2 2     # bottom-left all-off
 FD:E5:DE:BD 3 102   # top-right hallway on
 FD:E5:DE:BD 4 103   # bottom-right hallway off
 
 # switch at the staircase left
+group 63
 FD:E5:7B:2B 1 102   # top-left hallway on
 FD:E5:7B:2B 2 103   # bottom-left hallway off
 FD:E5:7B:2B 3 104   # top-right top floor hallway on
 FD:E5:7B:2B 4 105   # bottom-right top floor hallway off
 
 # switch at the staircase right
+group 1
 FD:E5:7B:7C 1 106   # top-left basement hallway on
 FD:E5:7B:7C 2 107   # bottom-left basement hallway off
 FD:E5:7B:7C 3 102   # top-right hallway on
 FD:E5:7B:7C 4 103   # bottom-right hallway off
 
 # switch at the staircase top
+group 47
 FD:E5:7B:24 1 104   # top-left top floor hallway on
 FD:E5:7B:24 2 105   # bottom-left top floor hallway off
 FD:E5:7B:24 3 104   # top-right top floor hallway on
 FD:E5:7B:24 4 105   # bottom-right top floor hallway off
 
 # switch at the staircase bottom
+group 1
 FD:E5:7B:39 1 110   # top-left basement on
 FD:E5:7B:39 2 111   # bottom-left basement left off
 FD:E5:7B:39 3 112   # top-right basement right on
