Add forwarding capability
Now, it's possible to configure the embedded version of the software as forwarder by defining PROXY_CONNECT
and setting master IP address and master port. The events will be the forwarded per UDP to the master.

The master processes events from all sources, filters out duplicates and then forwards the events to the
hue bridge.

This can be used to improve coverage in the house - just put an embedded forwarder in problematic areas.

--- a/example/example.conf
+++ b/example/example.conf
@@ -17,7 +17,11 @@ FD:E7:37:88 1 24
 
 # office switch
 group 63
-FD:E5:7B:67 -1 30
+FD:E5:7B:67 1 31
+FD:E5:7B:67 2 32
+FD:E5:7B:67 3 33
+FD:E5:7B:67 4 34
+FD:E5:7B:67 6 2		# all off
 
 # tap switch Katarina
 group 47
@@ -48,6 +52,12 @@ group 47
 # 108/109 - bathroom light on/off
 # 110/111 - basement left on/off
 # 112/113 - basement right on/off
+#
+# Special codes:
+#
+# 2 - all off
+# 130 - basement off
+# 131 - basement + ground floor off
 
 # bathroom switch
 group 47
@@ -62,6 +72,7 @@ FD:E5:DE:BD 1 101   # top-left no function now
 FD:E5:DE:BD 2 2     # bottom-left all-off
 FD:E5:DE:BD 3 102   # top-right hallway on
 FD:E5:DE:BD 4 103   # bottom-right hallway off
+FD:E5:DE:BD 6 131   # bottom basement + ground floor off
 
 # switch at the staircase left
 group 63
@@ -69,6 +80,7 @@ FD:E5:7B:2B 1 102   # top-left hallway on
 FD:E5:7B:2B 2 103   # bottom-left hallway off
 FD:E5:7B:2B 3 104   # top-right top floor hallway on
 FD:E5:7B:2B 4 105   # bottom-right top floor hallway off
+FD:E5:7B:2B 6 131   # bottom basement + ground floor off
 
 # switch at the staircase right
 group 1
@@ -76,6 +88,7 @@ FD:E5:7B:7C 1 106   # top-left basement hallway on
 FD:E5:7B:7C 2 107   # bottom-left basement hallway off
 FD:E5:7B:7C 3 102   # top-right hallway on
 FD:E5:7B:7C 4 103   # bottom-right hallway off
+FD:E5:7B:7C 6 130   # bottom basement off
 
 # switch at the staircase top
 group 47
@@ -83,6 +96,7 @@ FD:E5:7B:24 1 104   # top-left top floor hallway on
 FD:E5:7B:24 2 105   # bottom-left top floor hallway off
 FD:E5:7B:24 3 104   # top-right top floor hallway on
 FD:E5:7B:24 4 105   # bottom-right top floor hallway off
+FD:E5:7B:24 6 131   # bottom basement + ground floor off
 
 # switch at the staircase bottom
 group 1
@@ -90,6 +104,7 @@ FD:E5:7B:39 1 110   # top-left basement on
 FD:E5:7B:39 2 111   # bottom-left basement left off
 FD:E5:7B:39 3 112   # top-right basement right on
 FD:E5:7B:39 4 113   # bottom-right basement right ooff
+FD:E5:7B:39 6 130   # bottom basement off
 
 # 110-120 reserved for virtual switches from hallway
 
