--- a/example/example.conf
+++ b/example/example.conf
@@ -65,6 +65,7 @@ FD:E5:7B:77 1 108   # top-left bathroom light on
 FD:E5:7B:77 2 109   # bottom-left bathroom light off
 FD:E5:7B:77 3 102   # top-right hallway light on
 FD:E5:7B:77 4 103   # bottom-right hallway light off
+FD:E5:7B:77 6 131   # bottom basement + ground floor off
 
 # switch at the entry door
 group 63
