Extend example configuration
Added a new light

--- a/example/example.conf
+++ b/example/example.conf
@@ -8,12 +8,20 @@
 group 1
 FD:E7:37:A3 -1 10
 
+# dining table switch living room
+FD:E5:7B:38 1 71	# dining table on
+FD:E5:7B:38 2 70	# dining table off
+
 # tap switch kitchen
 group 1
 FD:E7:37:88 2 21
 FD:E7:37:88 4 22
 FD:E7:37:88 3 23
 FD:E7:37:88 1 24
+
+# dining table switch kitchen
+FD:E5:7B:2C 3 71	# dining table on
+FD:E5:7B:2C 4 70	# dining table off
 
 # office switch
 group 63
@@ -33,6 +41,12 @@ FD:E5:DE:C1 1 44
 # 50-59 reserved for kid's room dimmer + switch
 
 # 60-69 reserved for bedroom
+
+# switch dining table
+FD:E7:37:7B 4 71	# turn on light over dining table
+FD:E7:37:7B 2 19	# turn all lights off
+FD:E7:37:7B 3 14	# cycle lights in living room
+FD:E7:37:7B 1 29	# cycle lights in kitchen
 
 # bottom bathroom door contact
 group 63
