Multi-bridge support
Remove unneeded group handling and replace it by bridge set handling.
Remove direct connection from embedded proxies and only support proxy mode for embedded.

--- a/example/example.conf
+++ b/example/example.conf
@@ -4,16 +4,19 @@
 # 1 - ground floor - living room
 # 63 - ground floor - office (disabled for now, not yet configured)
 
+bridge 1
+
 # living room switch
-group 1
-FD:E7:37:A3 -1 10
+FD:E7:37:A3 1 11
+FD:E7:37:A3 2 19	# turn off light in both kitchen and living room
+FD:E7:37:A3 3 13
+FD:E7:37:A3 4 14
 
 # dining table switch living room
 FD:E5:7B:38 1 71	# dining table on
 FD:E5:7B:38 2 70	# dining table off
 
 # tap switch kitchen
-group 1
 FD:E7:37:88 2 21
 FD:E7:37:88 4 22
 FD:E7:37:88 3 23
@@ -24,7 +27,6 @@ FD:E5:7B:2C 3 71	# dining table on
 FD:E5:7B:2C 4 70	# dining table off
 
 # office switch
-group 63
 FD:E5:7B:67 1 31
 FD:E5:7B:67 2 32
 FD:E5:7B:67 3 33
@@ -32,7 +34,6 @@ FD:E5:7B:67 4 34
 FD:E5:7B:67 6 2		# all off
 
 # tap switch Katarina
-group 47
 FD:E5:DE:C1 2 41
 FD:E5:DE:C1 4 42
 FD:E5:DE:C1 3 43
@@ -49,12 +50,10 @@ FD:E7:37:7B 3 14	# cycle lights in living room
 FD:E7:37:7B 1 29	# cycle lights in kitchen
 
 # bottom bathroom door contact
-group 63
 02:95:E2:89 0 1000	# open
 02:95:E2:89 1 1001	# closed
 
 # top bathroom door contact
-group 47
 05:80:DF:96 0 1010	# open
 05:80:DF:96 1 1011	# closed
 
@@ -74,7 +73,6 @@ group 47
 # 131 - basement + ground floor off
 
 # bathroom switch
-group 47
 FD:E5:7B:77 1 108   # top-left bathroom light on
 FD:E5:7B:77 2 109   # bottom-left bathroom light off
 FD:E5:7B:77 3 102   # top-right hallway light on
@@ -82,7 +80,6 @@ FD:E5:7B:77 4 103   # bottom-right hallway light off
 FD:E5:7B:77 6 131   # bottom basement + ground floor off
 
 # switch at the entry door
-group 63
 FD:E5:DE:BD 1 101   # top-left no function now
 FD:E5:DE:BD 2 2     # bottom-left all-off
 FD:E5:DE:BD 3 102   # top-right hallway on
@@ -90,7 +87,6 @@ FD:E5:DE:BD 4 103   # bottom-right hallway off
 FD:E5:DE:BD 6 131   # bottom basement + ground floor off
 
 # switch at the staircase left
-group 63
 FD:E5:7B:2B 1 102   # top-left hallway on
 FD:E5:7B:2B 2 103   # bottom-left hallway off
 FD:E5:7B:2B 3 104   # top-right top floor hallway on
@@ -98,23 +94,27 @@ FD:E5:7B:2B 4 105   # bottom-right top floor hallway off
 FD:E5:7B:2B 6 131   # bottom basement + ground floor off
 
 # switch at the staircase right
-group 1
 FD:E5:7B:7C 1 106   # top-left basement hallway on
 FD:E5:7B:7C 2 107   # bottom-left basement hallway off
 FD:E5:7B:7C 3 102   # top-right hallway on
 FD:E5:7B:7C 4 103   # bottom-right hallway off
 FD:E5:7B:7C 6 130   # bottom basement off
 
-# switch at the staircase top
-group 47
+# switch at the staircase top left
 FD:E5:7B:24 1 104   # top-left top floor hallway on
 FD:E5:7B:24 2 105   # bottom-left top floor hallway off
 FD:E5:7B:24 3 104   # top-right top floor hallway on
 FD:E5:7B:24 4 105   # bottom-right top floor hallway off
 FD:E5:7B:24 6 131   # bottom basement + ground floor off
 
+# switch at the staircase top right
+FE:F3:5D:8C 1 102   # top-left hallway on
+FE:F3:5D:8C 2 103   # bottom-left hallway off
+FE:F3:5D:8C 3 104   # top-right top floor hallway on
+FE:F3:5D:8C 4 105   # bottom-right top floor hallway off
+FE:F3:5D:8C 6 131   # bottom basement + ground floor off
+
 # switch at the staircase bottom
-group 1
 FD:E5:7B:39 1 110   # top-left basement on
 FD:E5:7B:39 2 111   # bottom-left basement left off
 FD:E5:7B:39 3 112   # top-right basement right on
