Send negated commands upon switch release
This allows creating dimming/brightening actions easily.

--- a/example/example.conf
+++ b/example/example.conf
@@ -27,6 +27,7 @@ FD:E5:7B:2C 3 71	# dining table on
 FD:E5:7B:2C 4 70	# dining table off
 
 # office switch
+FD:E5:7B:67 0 -1	# send negated command on release
 FD:E5:7B:67 1 31
 FD:E5:7B:67 2 32
 FD:E5:7B:67 3 33
