Add one more room to example

--- a/example/example.conf
+++ b/example/example.conf
@@ -4,7 +4,7 @@
 # 1 - ground floor - living room
 # 63 - ground floor - office (disabled for now, not yet configured)
 
-bridge 1
+bridge 1 2
 
 # living room switch
 FD:E7:37:A3 1 11
@@ -16,7 +16,7 @@ FD:E7:37:A3 4 14
 FD:E5:7B:38 1 71	# dining table on
 FD:E5:7B:38 2 70	# dining table off
 
-# tap switch kitchen
+# tap switch kitchen - currently inactive
 FD:E7:37:88 2 21
 FD:E7:37:88 4 22
 FD:E7:37:88 3 23
@@ -66,6 +66,7 @@ FD:E7:37:7B 1 29	# cycle lights in kitchen
 # 108/109 - bathroom light on/off
 # 110/111 - basement left on/off
 # 112/113 - basement right on/off
+# 121/122 - basement/guestroom
 #
 # Special codes:
 #
@@ -121,6 +122,10 @@ FD:E5:7B:39 2 111   # bottom-left basement left off
 FD:E5:7B:39 3 112   # top-right basement right on
 FD:E5:7B:39 4 113   # bottom-right basement right ooff
 FD:E5:7B:39 6 130   # bottom basement off
+
+# switch basement/guestroom
+FD:E5:7B:66 1 121	# light on
+FD:E5:7B:66 2 122	# light off
 
 # 110-120 reserved for virtual switches from hallway
 
