Update example - new sensor

--- a/example/example.conf
+++ b/example/example.conf
@@ -58,6 +58,10 @@ FD:E7:37:7B 1 29	# cycle lights in kitchen
 05:80:DF:96 0 1010	# open
 05:80:DF:96 1 1011	# closed
 
+# child room door contact
+05:80:DF:91 0 1020	# open
+05:80:DF:91 1 1021	# closed
+
 # Hallway and so:
 #
 # 102/103 - ground floor hallway light on/off
