Add support for specifying bridge port number

--- a/example/example.conf
+++ b/example/example.conf
@@ -16,6 +16,13 @@ FD:E7:37:A3 4 14
 FD:E5:7B:38 1 71	# dining table on
 FD:E5:7B:38 2 70	# dining table off
 
+# switch at patio door
+FE:F3:5D:3C 1 150   # patio light on
+FE:F3:5D:3C 2 151   # patio light off
+FE:F3:5D:3C 3 17    # cabinet light on
+FE:F3:5D:3C 4 18    # cabinet light off
+
+
 # tap switch kitchen - currently inactive
 FD:E7:37:88 2 21
 FD:E7:37:88 4 22
