--- a/example/example.conf
+++ b/example/example.conf
@@ -37,9 +37,12 @@ FD:E5:7B:2C 4 70	# dining table off
 FD:E5:7B:67 0 -1	# send negated command on release
 FD:E5:7B:67 1 31
 FD:E5:7B:67 2 32
-FD:E5:7B:67 3 33
-FD:E5:7B:67 4 34
-FD:E5:7B:67 6 2		# all off
+FD:E5:7B:67 3 33    # on
+FD:E5:7B:67 5 33    # on
+FD:E5:7B:67 4 34    # off
+FD:E5:7B:67 6 34    # off
+FD:E5:7B:67 7 2		# all off
+FD:E5:7B:67 8 2		# all off
 
 # tap switch Katarina
 FD:E5:DE:C1 2 41
@@ -87,10 +90,13 @@ FD:E7:37:7B 1 29	# cycle lights in kitchen
 
 # bathroom switch
 FD:E5:7B:77 1 108   # top-left bathroom light on
+FD:E5:7B:77 5 108   # top bathroom light on
 FD:E5:7B:77 2 109   # bottom-left bathroom light off
+FD:E5:7B:77 6 109   # bottom bathroom light off
 FD:E5:7B:77 3 102   # top-right hallway light on
 FD:E5:7B:77 4 103   # bottom-right hallway light off
-FD:E5:7B:77 6 131   # bottom basement + ground floor off
+FD:E5:7B:77 7 131   # cross basement + ground floor off
+FD:E5:7B:77 8 131   # cross basement + ground floor off
 
 # switch at the entry door
 FD:E5:DE:BD 1 101   # top-left no function now
@@ -101,38 +107,53 @@ FD:E5:DE:BD 6 131   # bottom basement + ground floor off
 
 # switch at the staircase left
 FD:E5:7B:2B 1 102   # top-left hallway on
+FD:E5:7B:2B 5 102   # top hallway on
 FD:E5:7B:2B 2 103   # bottom-left hallway off
+FD:E5:7B:2B 6 103   # bottom hallway off
 FD:E5:7B:2B 3 104   # top-right top floor hallway on
 FD:E5:7B:2B 4 105   # bottom-right top floor hallway off
-FD:E5:7B:2B 6 131   # bottom basement + ground floor off
+FD:E5:7B:2B 7 131   # cross basement + ground floor off
+FD:E5:7B:2B 8 131   # cross basement + ground floor off
 
 # switch at the staircase right
 FD:E5:7B:7C 1 106   # top-left basement hallway on
 FD:E5:7B:7C 2 107   # bottom-left basement hallway off
 FD:E5:7B:7C 3 102   # top-right hallway on
+FD:E5:7B:7C 5 102   # top hallway on
 FD:E5:7B:7C 4 103   # bottom-right hallway off
-FD:E5:7B:7C 6 130   # bottom basement off
+FD:E5:7B:7C 6 103   # bottom hallway off
+FD:E5:7B:7C 7 130   # cross basement off
+FD:E5:7B:7C 8 130   # cross basement off
 
 # switch at the staircase top left
 FD:E5:7B:24 1 104   # top-left top floor hallway on
 FD:E5:7B:24 2 105   # bottom-left top floor hallway off
 FD:E5:7B:24 3 104   # top-right top floor hallway on
+FD:E5:7B:24 5 104   # top top floor hallway on
 FD:E5:7B:24 4 105   # bottom-right top floor hallway off
-FD:E5:7B:24 6 131   # bottom basement + ground floor off
+FD:E5:7B:24 6 105   # bottom top floor hallway off
+FD:E5:7B:24 7 131   # cross basement + ground floor off
+FD:E5:7B:24 8 131   # cross basement + ground floor off
 
 # switch at the staircase top right
 FE:F3:5D:8C 1 102   # top-left hallway on
 FE:F3:5D:8C 2 103   # bottom-left hallway off
 FE:F3:5D:8C 3 104   # top-right top floor hallway on
+FE:F3:5D:8C 5 104   # top top floor hallway on
 FE:F3:5D:8C 4 105   # bottom-right top floor hallway off
-FE:F3:5D:8C 6 131   # bottom basement + ground floor off
+FE:F3:5D:8C 6 105   # bottom top floor hallway off
+FE:F3:5D:8C 7 131   # cross basement + ground floor off
+FE:F3:5D:8C 8 131   # cross basement + ground floor off
 
 # switch at the staircase bottom
-FD:E5:7B:39 1 110   # top-left basement on
-FD:E5:7B:39 2 111   # bottom-left basement left off
+FD:E5:7B:39 1 121   # top-left basement/guestroom on
+FD:E5:7B:39 2 122   # bottom-left basement/guestroom off
 FD:E5:7B:39 3 112   # top-right basement right on
-FD:E5:7B:39 4 113   # bottom-right basement right ooff
-FD:E5:7B:39 6 130   # bottom basement off
+FD:E5:7B:39 4 113   # bottom-right basement right off
+FD:E5:7B:39 5 110   # top basement middle on
+FD:E5:7B:39 6 111   # bottom basement middle off
+FD:E5:7B:39 7 130   # cross basement off
+FD:E5:7B:39 8 130   # cross basement off
 
 # switch basement/guestroom
 FD:E5:7B:66 1 121	# light on
